Fix spacing in pre
Closes #329

--- a/sass/_theme_rst.sass
+++ b/sass/_theme_rst.sass
@@ -19,6 +19,9 @@
     max-width: 100%
     height: auto !important
 
+  .highlight > pre
+    line-height: normal
+
   div.figure
     margin-bottom: $base-line-height
     p.caption
